--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "company-system": {
+    "UK-business-portal": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/company-system",
+            "outputPath": "dist/UK-business-portal",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -66,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "company-system:build:production"
+              "buildTarget": "UK-business-portal:build:production"
             },
             "development": {
-              "buildTarget": "company-system:build:development"
+              "buildTarget": "UK-business-portal:build:development"
             }
           },
           "defaultConfiguration": "development"
