--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run start:full",
     "start:full": "concurrently \"npm run start:api\" \"npm run start:app\"",
-    "start:app": "ng serve",
+    "start:app": "ng serve --port 4200",
     "start:api": "json-server --watch db.json --port 3000",
     "dev": "node start.js",
     "build": "ng build",
@@ -39,7 +39,7 @@
     "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
-    "concurrently": "^9.1.2",
+    "concurrently": "^9.2.0",
     "jasmine-core": "~5.6.0",
     "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
